# Kaggle_RSNA_Screening_Mammography

./: README.md  datagenerator.py  inference.py  model.py  prep_data.py  preprocessor.py  pyproject.toml  train_model.py  train_val_split.py
config/: config.yaml  config_kaggle.yaml
src/: predict_model.py  train_model.py
src/data/: datagenerator.py  extract_roi.py  preprocess_test_images.py  preprocessor.py  train_val_split.py
src/models/: model.py  predict_model.py  train_model.py
test/: test_data_generator.py
